<resources>
    <string name="app_name">Beer House</string>

    <!-- Menu Auxiliar -->
    <string name="action_settings">Settings</string>
    <string name="action_sobre">Sobre</string>

    <!-- Mensagens -->
    <string name="msg_logout">Deseja realmente sair?</string>
    <string name="hello_world">Hello world!</string>

    <!-- Tela Principal Menu -->
    <string name="lbl_principal_titulo">App Beer House - Trabalho Final</string>
    <string name="lbl_principal_rodape">Desenvolvido por Lucas Dias Santiago</string>
    <string name="lbl_principal_sobre">Sobre</string>
    <string name="lbl_principal_listar">Receitas</string>
    <string name="lbl_principal_tabela">Tabela</string>
    <string name="lbl_principal_abv">ABV</string>
    <string name="lbl_principal_sair">Sair</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="title_activity_abv">Calcular ABV</string>

    <!-- Tela ABV -->
    <string name="lbl_abv_titulo">Cálculo do teor alcoolico da cerveja</string>
    <string name="lbl_abv_di">Densidade Inicial (DI)</string>
    <string name="lbl_abv_df">Densidade Final (DF)</string>
    <string name="lbl_abv_calculado">Porcentagem de Alcool (ABV)</string>
    <string name="lbl_abv_calcular">Calcular</string>
    <string name="lbl_abv_limpar">Limpar</string>
    <string name="lbl_abv_cadastrar_receita">Cadastrar Receita</string>
    <string name="msg_abv_obrigatorio_di">Densidade Inicial é obrigatório</string>
    <string name="msg_abv_obrigatorio_df">Densidade Final é obrigatório</string>
    <string name="msg_abv_calculo_erro_di_maior_df">DI deve ser maior que DO</string>
    <string name="msg_abv_calculo_erro_di_maior">DI maior que 1.000</string>
    <string name="msg_abv_calculo_erro_di_menor">DI menor que 1.100</string>
    <string name="msg_abv_calculo_erro_df_maior">DF maior que 1.000</string>
    <string name="msg_abv_calculo_erro_df_menor">DF menor que 1.100</string>
    <string name="msg_abv_calculo_erro_di_df_faixa">Valor deve estar entre 1.000 e 1.100</string>
    <string name="msg_abv_calculo_sucesso">Cálculo realizado com sucesso!</string>
    <string name="msg_abv_cadastrar_receita_confirmacao">Deseja cadastrar uma receita com o ABV calculado?</string>
    <string name="title_activity_cadastrar_receita">Cadastrar Receita</string>

    <!-- Tela Cadastrar Receita -->
    <string name="lbl_receita_pagina_inicial">Página Inicial</string>
    <string name="lbl_cadastrar_receita_titulo">Cadastrar Receita</string>
    <string name="lbl_cadastrar_receita_nome">Nome</string>
    <string name="lbl_cadastrar_receita_tipo_familia">Tipo Família</string>
    <string name="lbl_cadastrar_receita_ale">Ale</string>
    <string name="lbl_cadastrar_receita_lager">Lager</string>
    <string name="lbl_cadastrar_receita_hibrido">Híbrido</string>
    <string name="lbl_cadastrar_receita_cadastrar">Cadastrar</string>
    <string name="lbl_cadastrar_receita_limpar">Limpar</string>
    <string name="msg_cadastrar_receita_obrigatorio_nome">Nome é obrigatório</string>
    <string name="msg_cadastrar_receita_obrigatorio_tipo">Tipo Família é obrigatório</string>
    <string name="msg_cadastrar_receita_sucesso">Receita cadastrada com sucesso.</string>
    <string name="title_activity_listar_receita">Listar Receita</string>

    <!-- Tela Listar Receita -->
    <string name="lbl_listar_receita_titulo">Lista de Receitas Cadastradas</string>
    <string name="msg_listar_receita_nenhuma_receita_encontrada">Nenhuma receita foi encontrada.</string>

    <!-- Tela Menu Sobre. Apertar F2 do teclado para aparecer o Menu Sobre -->
    <string name="lbl_sobre_titulo">Sobre Aplicação Beer House</string>
    <string name="lbl_sobre_desenvolvido">Desenvolvido por:</string>
    <string name="lbl_sobre_desenvolvido_autor">Lucas Dias Santiago</string>
    <string name="lbl_sobre_justificativa">Justificativa:</string>
    <string name="lbl_sobre_justificativa_desc">A aplicação foi desenvolvida como trabalho final da disciplina Desenvolvimento de Aplicações Móveis ofertada pelo curso de Arquitetura de Software Distribuído pela PUC MINAS.</string>
    <string name="lbl_sobre_dicionario">Dicionário de Dados:</string>
    <string name="lbl_sobre_dicionario_abv">ABV: medida em porcentagem do teor alcoolico da cerveja.</string>
    <string name="lbl_sobre_dicionario_di">DI: densidade inicial medida antes de inocular o fermento.</string>
    <string name="lbl_sobre_dicionario_df">DI: densidade final medida após o processo de fermentação.</string>
    <string name="lbl_sobre_dicionario_tabela">Tabela Periódica: tabela que reune as características das diversas cervejas produzidas no mundo. Dividida em 3 grandes famílias: Ale, Lager e Híbrida.</string>
    <string name="lbl_sobre_funcionalidades">Funcionalidades:</string>
    <string name="lbl_sobre_funcionalidades_menu_receitas">Menu Receitras: lista das Receitas cadastradas através do Menu ABV</string>
    <string name="lbl_sobre_funcionalidades_menu_abv">Menu ABV: calcula o teor alcoolico da cerveja através de uma operação de cálculo com o DI e DF informados. A partir do cálculo, o usuário tem a opcção de cadastrar uma Rceita de Cerveja.</string>
    <string name="lbl_sobre_funcionalidades_menu_tabela">Menu Tabela: necessário o acesso a Internet para visualização da Tabela Periódica das Cervejas.</string>
    <string name="lbl_sobre_funcionalidades_menu_sair">Menu Sair: finaliza a aplicação.</string>



</resources>
