<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_large"
    tools:context="beerhouse.lucas.mobile.pucminas.com.beerhouse.SobreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/borda_1"
        android:orientation="vertical">

        <TextView android:text="@string/lbl_sobre_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_large"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|italic"
            android:textSize="18dp"
            android:textColor="#FF8C00"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView android:text="@string/lbl_sobre_desenvolvido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textStyle="bold|italic"/>

            <TextView android:text="@string/lbl_sobre_desenvolvido_autor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView android:text="@string/lbl_sobre_justificativa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textStyle="bold|italic"/>

            <TextView android:text="@string/lbl_sobre_justificativa_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView android:text="@string/lbl_sobre_dicionario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textStyle="bold|italic"/>

            <TextView android:text="@string/lbl_sobre_dicionario_tabela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView android:text="@string/lbl_sobre_dicionario_abv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView android:text="@string/lbl_sobre_dicionario_di"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView android:text="@string/lbl_sobre_dicionario_df"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView android:text="@string/lbl_sobre_funcionalidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textStyle="bold|italic"/>

            <TextView android:text="@string/lbl_sobre_funcionalidades_menu_receitas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView android:text="@string/lbl_sobre_funcionalidades_menu_abv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView android:text="@string/lbl_sobre_funcionalidades_menu_tabela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView android:text="@string/lbl_sobre_funcionalidades_menu_sair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
