<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutCorpoFora"
    tools:context=".PrincipalActivity">

    <LinearLayout style="@style/LayoutCorpoDentro">

        <TextView android:text="@string/lbl_principal_titulo"
            style="@style/TituloTela"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/borda_1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnListar"
            style="@style/BotaoDash"
            android:drawableTop="@drawable/search_click_img"
            android:textColor="@drawable/search_click_color"
            android:text="@string/lbl_principal_listar"
            android:onClick="listarReceitas"/>

        <Button
            style="@style/BotaoDash"
            android:drawableTop="@drawable/beer64"
            android:text="@string/lbl_principal_abv"
            android:onClick="calcularABV"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/borda_1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPesquisar"
            style="@style/BotaoDash"
            android:drawableTop="@drawable/browser64"
            android:text="@string/lbl_principal_tabela"
            android:onClick="exibirTabela"/>

        <Button
            style="@style/BotaoDash"
            android:drawableTop="@drawable/logout64"
            android:text="@string/lbl_principal_sair"
            android:onClick="logout" />
    </LinearLayout>

    <LinearLayout style="@style/LayoutCorpoDentro">

        <TextView android:text="@string/lbl_principal_rodape"
            style="@style/TituloTela"/>

    </LinearLayout>

</LinearLayout>