<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        style="@style/LayoutCorpoFora"
        tools:context="beerhouse.lucas.mobile.pucminas.com.beerhouse.CadastrarReceitaActivity">

        <LinearLayout style="@style/LayoutCorpoDentro">

            <TextView android:text="@string/lbl_cadastrar_receita_titulo"
                style="@style/TituloTela"/>

            <TextView android:text="@string/lbl_cadastrar_receita_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_cadastrar_receita_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:inputType="text"/>

            <TextView android:text="@string/lbl_abv_calculado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_cadastrar_receita_abv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:inputType="numberDecimal"
                android:ems="10"
                android:editable="false"/>

            <TextView android:text="@string/lbl_cadastrar_receita_tipo_familia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:orientation="horizontal"
                android:id="@+id/radiogroup_cadastrar_receita">
                <RadioButton android:id="@+id/radio_cadastrar_receita_ale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_cadastrar_receita_ale" >
                </RadioButton>
                <RadioButton android:id="@+id/radio_cadastrar_receita_lager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_cadastrar_receita_lager">
                </RadioButton>
                <RadioButton android:id="@+id/radio_cadastrar_receita_hibrido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_cadastrar_receita_hibrido">
                </RadioButton>

            </RadioGroup>

            <Button
                android:id="@+id/btn_cadastrar_receita_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cadastrarReceita"
                android:text="@string/lbl_cadastrar_receita_cadastrar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>